Fix image not showing up

--- a/app/components/Hero/Hero.css
+++ b/app/components/Hero/Hero.css
@@ -8,7 +8,6 @@
   align-items: center;
   top: 0;
   background-color: #e5e2de;
-  background-image: url(/assets/images/hero.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
